core/components/grammar/BCDParser.py
# Generated from BCDParser.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class BCDParser ( Parser ):

    grammarFileName = "BCDParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'<'", "'</'", "'{{#'", "'{{/'", "'{{'", 
                     "<INVALID>", "<INVALID>", "'/>'", "'='", "':'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'}}'" ]

    symbolicNames = [ "<INVALID>", "COMMENT", "CDATA", "DTD", "RAW_TAG", 
                      "OPEN_BEGIN", "OPEN_END", "OPEN_MACRO_BEGIN", "OPEN_MACRO_END", 
                      "INLINE_MACRO", "TEXT", "CLOSE", "SLASH_CLOSE", "EQ", 
                      "COLON", "STRING", "NAME", "WS", "CLOSE_MACRO", "COMMAND", 
                      "RAW_CLOSE", "RAW_EQ", "RAW_STRING", "RAW_NAME", "RAW_WS", 
                      "CLOSE_TAG", "RAW_TEXT" ]

    RULE_process = 0
    RULE_atom = 1
    RULE_tag = 2
    RULE_tagBegin = 3
    RULE_tagEnd = 4
    RULE_attr = 5
    RULE_attrName = 6
    RULE_attrValue = 7
    RULE_macro = 8
    RULE_macroBegin = 9
    RULE_macroEnd = 10
    RULE_macroCommand = 11
    RULE_inlineMacro = 12
    RULE_text = 13
    RULE_rawBlock = 14
    RULE_rawTag = 15
    RULE_rawAttr = 16
    RULE_rawName = 17
    RULE_rawText = 18
    RULE_rawCloseTag = 19

    ruleNames =  [ "process", "atom", "tag", "tagBegin", "tagEnd", "attr", 
                   "attrName", "attrValue", "macro", "macroBegin", "macroEnd", 
                   "macroCommand", "inlineMacro", "text", "rawBlock", "rawTag", 
                   "rawAttr", "rawName", "rawText", "rawCloseTag" ]

    EOF = Token.EOF
    COMMENT=1
    CDATA=2
    DTD=3
    RAW_TAG=4
    OPEN_BEGIN=5
    OPEN_END=6
    OPEN_MACRO_BEGIN=7
    OPEN_MACRO_END=8
    INLINE_MACRO=9
    TEXT=10
    CLOSE=11
    SLASH_CLOSE=12
    EQ=13
    COLON=14
    STRING=15
    NAME=16
    WS=17
    CLOSE_MACRO=18
    COMMAND=19
    RAW_CLOSE=20
    RAW_EQ=21
    RAW_STRING=22
    RAW_NAME=23
    RAW_WS=24
    CLOSE_TAG=25
    RAW_TEXT=26

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProcessContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atom(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BCDParser.AtomContext)
            else:
                return self.getTypedRuleContext(BCDParser.AtomContext,i)


        def getRuleIndex(self):
            return BCDParser.RULE_process

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcess" ):
                listener.enterProcess(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcess" ):
                listener.exitProcess(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcess" ):
                return visitor.visitProcess(self)
            else:
                return visitor.visitChildren(self)




    def process(self):

        localctx = BCDParser.ProcessContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_process)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BCDParser.RAW_TAG) | (1 << BCDParser.OPEN_BEGIN) | (1 << BCDParser.OPEN_END) | (1 << BCDParser.OPEN_MACRO_BEGIN) | (1 << BCDParser.OPEN_MACRO_END) | (1 << BCDParser.INLINE_MACRO) | (1 << BCDParser.TEXT))) != 0):
                self.state = 40
                self.atom()
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tag(self):
            return self.getTypedRuleContext(BCDParser.TagContext,0)


        def macro(self):
            return self.getTypedRuleContext(BCDParser.MacroContext,0)


        def inlineMacro(self):
            return self.getTypedRuleContext(BCDParser.InlineMacroContext,0)


        def text(self):
            return self.getTypedRuleContext(BCDParser.TextContext,0)


        def rawBlock(self):
            return self.getTypedRuleContext(BCDParser.RawBlockContext,0)


        def getRuleIndex(self):
            return BCDParser.RULE_atom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom" ):
                listener.enterAtom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom" ):
                listener.exitAtom(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtom" ):
                return visitor.visitAtom(self)
            else:
                return visitor.visitChildren(self)




    def atom(self):

        localctx = BCDParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_atom)
        try:
            self.state = 51
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BCDParser.OPEN_BEGIN, BCDParser.OPEN_END]:
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.tag()
                pass
            elif token in [BCDParser.OPEN_MACRO_BEGIN, BCDParser.OPEN_MACRO_END]:
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.macro()
                pass
            elif token in [BCDParser.INLINE_MACRO]:
                self.enterOuterAlt(localctx, 3)
                self.state = 48
                self.inlineMacro()
                pass
            elif token in [BCDParser.TEXT]:
                self.enterOuterAlt(localctx, 4)
                self.state = 49
                self.text()
                pass
            elif token in [BCDParser.RAW_TAG]:
                self.enterOuterAlt(localctx, 5)
                self.state = 50
                self.rawBlock()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TagContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tagBegin(self):
            return self.getTypedRuleContext(BCDParser.TagBeginContext,0)


        def tagEnd(self):
            return self.getTypedRuleContext(BCDParser.TagEndContext,0)


        def getRuleIndex(self):
            return BCDParser.RULE_tag

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTag" ):
                listener.enterTag(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTag" ):
                listener.exitTag(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTag" ):
                return visitor.visitTag(self)
            else:
                return visitor.visitChildren(self)




    def tag(self):

        localctx = BCDParser.TagContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_tag)
        try:
            self.state = 55
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BCDParser.OPEN_BEGIN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 53
                self.tagBegin()
                pass
            elif token in [BCDParser.OPEN_END]:
                self.enterOuterAlt(localctx, 2)
                self.state = 54
                self.tagEnd()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TagBeginContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN_BEGIN(self):
            return self.getToken(BCDParser.OPEN_BEGIN, 0)

        def NAME(self):
            return self.getToken(BCDParser.NAME, 0)

        def CLOSE(self):
            return self.getToken(BCDParser.CLOSE, 0)

        def SLASH_CLOSE(self):
            return self.getToken(BCDParser.SLASH_CLOSE, 0)

        def attr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BCDParser.AttrContext)
            else:
                return self.getTypedRuleContext(BCDParser.AttrContext,i)


        def getRuleIndex(self):
            return BCDParser.RULE_tagBegin

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTagBegin" ):
                listener.enterTagBegin(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTagBegin" ):
                listener.exitTagBegin(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTagBegin" ):
                return visitor.visitTagBegin(self)
            else:
                return visitor.visitChildren(self)




    def tagBegin(self):

        localctx = BCDParser.TagBeginContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_tagBegin)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(BCDParser.OPEN_BEGIN)
            self.state = 58
            self.match(BCDParser.NAME)
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BCDParser.NAME:
                self.state = 59
                self.attr()
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 65
            _la = self._input.LA(1)
            if not(_la==BCDParser.CLOSE or _la==BCDParser.SLASH_CLOSE):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TagEndContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN_END(self):
            return self.getToken(BCDParser.OPEN_END, 0)

        def NAME(self):
            return self.getToken(BCDParser.NAME, 0)

        def CLOSE(self):
            return self.getToken(BCDParser.CLOSE, 0)

        def getRuleIndex(self):
            return BCDParser.RULE_tagEnd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTagEnd" ):
                listener.enterTagEnd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTagEnd" ):
                listener.exitTagEnd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTagEnd" ):
                return visitor.visitTagEnd(self)
            else:
                return visitor.visitChildren(self)




    def tagEnd(self):

        localctx = BCDParser.TagEndContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_tagEnd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(BCDParser.OPEN_END)
            self.state = 68
            self.match(BCDParser.NAME)
            self.state = 69
            self.match(BCDParser.CLOSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttrContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attrName(self):
            return self.getTypedRuleContext(BCDParser.AttrNameContext,0)


        def EQ(self):
            return self.getToken(BCDParser.EQ, 0)

        def attrValue(self):
            return self.getTypedRuleContext(BCDParser.AttrValueContext,0)


        def getRuleIndex(self):
            return BCDParser.RULE_attr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttr" ):
                listener.enterAttr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttr" ):
                listener.exitAttr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttr" ):
                return visitor.visitAttr(self)
            else:
                return visitor.visitChildren(self)




    def attr(self):

        localctx = BCDParser.AttrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_attr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.attrName()
            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BCDParser.EQ:
                self.state = 72
                self.match(BCDParser.EQ)
                self.state = 73
                self.attrValue()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttrNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(BCDParser.NAME)
            else:
                return self.getToken(BCDParser.NAME, i)

        def COLON(self):
            return self.getToken(BCDParser.COLON, 0)

        def getRuleIndex(self):
            return BCDParser.RULE_attrName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttrName" ):
                listener.enterAttrName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttrName" ):
                listener.exitAttrName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttrName" ):
                return visitor.visitAttrName(self)
            else:
                return visitor.visitChildren(self)




    def attrName(self):

        localctx = BCDParser.AttrNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_attrName)
        self._la = 0 # Token type
        try:
            self.state = 82
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.match(BCDParser.NAME)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 77
                self.match(BCDParser.NAME)
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==BCDParser.COLON:
                    self.state = 78
                    self.match(BCDParser.COLON)
                    self.state = 79
                    self.match(BCDParser.NAME)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttrValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(BCDParser.STRING, 0)

        def getRuleIndex(self):
            return BCDParser.RULE_attrValue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttrValue" ):
                listener.enterAttrValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttrValue" ):
                listener.exitAttrValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttrValue" ):
                return visitor.visitAttrValue(self)
            else:
                return visitor.visitChildren(self)




    def attrValue(self):

        localctx = BCDParser.AttrValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_attrValue)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(BCDParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MacroContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def macroBegin(self):
            return self.getTypedRuleContext(BCDParser.MacroBeginContext,0)


        def macroEnd(self):
            return self.getTypedRuleContext(BCDParser.MacroEndContext,0)


        def getRuleIndex(self):
            return BCDParser.RULE_macro

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMacro" ):
                listener.enterMacro(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMacro" ):
                listener.exitMacro(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMacro" ):
                return visitor.visitMacro(self)
            else:
                return visitor.visitChildren(self)




    def macro(self):

        localctx = BCDParser.MacroContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_macro)
        try:
            self.state = 88
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BCDParser.OPEN_MACRO_BEGIN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.macroBegin()
                pass
            elif token in [BCDParser.OPEN_MACRO_END]:
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.macroEnd()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MacroBeginContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN_MACRO_BEGIN(self):
            return self.getToken(BCDParser.OPEN_MACRO_BEGIN, 0)

        def macroCommand(self):
            return self.getTypedRuleContext(BCDParser.MacroCommandContext,0)


        def CLOSE_MACRO(self):
            return self.getToken(BCDParser.CLOSE_MACRO, 0)

        def getRuleIndex(self):
            return BCDParser.RULE_macroBegin

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMacroBegin" ):
                listener.enterMacroBegin(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMacroBegin" ):
                listener.exitMacroBegin(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMacroBegin" ):
                return visitor.visitMacroBegin(self)
            else:
                return visitor.visitChildren(self)




    def macroBegin(self):

        localctx = BCDParser.MacroBeginContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_macroBegin)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(BCDParser.OPEN_MACRO_BEGIN)
            self.state = 91
            self.macroCommand()
            self.state = 92
            self.match(BCDParser.CLOSE_MACRO)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MacroEndContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN_MACRO_END(self):
            return self.getToken(BCDParser.OPEN_MACRO_END, 0)

        def COMMAND(self):
            return self.getToken(BCDParser.COMMAND, 0)

        def CLOSE_MACRO(self):
            return self.getToken(BCDParser.CLOSE_MACRO, 0)

        def getRuleIndex(self):
            return BCDParser.RULE_macroEnd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMacroEnd" ):
                listener.enterMacroEnd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMacroEnd" ):
                listener.exitMacroEnd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMacroEnd" ):
                return visitor.visitMacroEnd(self)
            else:
                return visitor.visitChildren(self)




    def macroEnd(self):

        localctx = BCDParser.MacroEndContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_macroEnd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(BCDParser.OPEN_MACRO_END)
            self.state = 95
            self.match(BCDParser.COMMAND)
            self.state = 96
            self.match(BCDParser.CLOSE_MACRO)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MacroCommandContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMAND(self):
            return self.getToken(BCDParser.COMMAND, 0)

        def getRuleIndex(self):
            return BCDParser.RULE_macroCommand

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMacroCommand" ):
                listener.enterMacroCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMacroCommand" ):
                listener.exitMacroCommand(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMacroCommand" ):
                return visitor.visitMacroCommand(self)
            else:
                return visitor.visitChildren(self)




    def macroCommand(self):

        localctx = BCDParser.MacroCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_macroCommand)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(BCDParser.COMMAND)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InlineMacroContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INLINE_MACRO(self):
            return self.getToken(BCDParser.INLINE_MACRO, 0)

        def COMMAND(self):
            return self.getToken(BCDParser.COMMAND, 0)

        def CLOSE_MACRO(self):
            return self.getToken(BCDParser.CLOSE_MACRO, 0)

        def getRuleIndex(self):
            return BCDParser.RULE_inlineMacro

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInlineMacro" ):
                listener.enterInlineMacro(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInlineMacro" ):
                listener.exitInlineMacro(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInlineMacro" ):
                return visitor.visitInlineMacro(self)
            else:
                return visitor.visitChildren(self)




    def inlineMacro(self):

        localctx = BCDParser.InlineMacroContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_inlineMacro)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(BCDParser.INLINE_MACRO)
            self.state = 101
            self.match(BCDParser.COMMAND)
            self.state = 102
            self.match(BCDParser.CLOSE_MACRO)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TextContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TEXT(self):
            return self.getToken(BCDParser.TEXT, 0)

        def getRuleIndex(self):
            return BCDParser.RULE_text

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterText" ):
                listener.enterText(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitText" ):
                listener.exitText(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitText" ):
                return visitor.visitText(self)
            else:
                return visitor.visitChildren(self)




    def text(self):

        localctx = BCDParser.TextContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_text)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(BCDParser.TEXT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RawBlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rawTag(self):
            return self.getTypedRuleContext(BCDParser.RawTagContext,0)


        def RAW_CLOSE(self):
            return self.getToken(BCDParser.RAW_CLOSE, 0)

        def rawText(self):
            return self.getTypedRuleContext(BCDParser.RawTextContext,0)


        def rawCloseTag(self):
            return self.getTypedRuleContext(BCDParser.RawCloseTagContext,0)


        def rawAttr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BCDParser.RawAttrContext)
            else:
                return self.getTypedRuleContext(BCDParser.RawAttrContext,i)


        def getRuleIndex(self):
            return BCDParser.RULE_rawBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRawBlock" ):
                listener.enterRawBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRawBlock" ):
                listener.exitRawBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRawBlock" ):
                return visitor.visitRawBlock(self)
            else:
                return visitor.visitChildren(self)




    def rawBlock(self):

        localctx = BCDParser.RawBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_rawBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.rawTag()
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BCDParser.RAW_NAME:
                self.state = 107
                self.rawAttr()
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 113
            self.match(BCDParser.RAW_CLOSE)
            self.state = 114
            self.rawText()
            self.state = 115
            self.rawCloseTag()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RawTagContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RAW_TAG(self):
            return self.getToken(BCDParser.RAW_TAG, 0)

        def getRuleIndex(self):
            return BCDParser.RULE_rawTag

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRawTag" ):
                listener.enterRawTag(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRawTag" ):
                listener.exitRawTag(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRawTag" ):
                return visitor.visitRawTag(self)
            else:
                return visitor.visitChildren(self)




    def rawTag(self):

        localctx = BCDParser.RawTagContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_rawTag)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(BCDParser.RAW_TAG)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RawAttrContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rawName(self):
            return self.getTypedRuleContext(BCDParser.RawNameContext,0)


        def RAW_EQ(self):
            return self.getToken(BCDParser.RAW_EQ, 0)

        def RAW_STRING(self):
            return self.getToken(BCDParser.RAW_STRING, 0)

        def getRuleIndex(self):
            return BCDParser.RULE_rawAttr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRawAttr" ):
                listener.enterRawAttr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRawAttr" ):
                listener.exitRawAttr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRawAttr" ):
                return visitor.visitRawAttr(self)
            else:
                return visitor.visitChildren(self)




    def rawAttr(self):

        localctx = BCDParser.RawAttrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_rawAttr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.rawName()
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BCDParser.RAW_EQ:
                self.state = 120
                self.match(BCDParser.RAW_EQ)
                self.state = 121
                self.match(BCDParser.RAW_STRING)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RawNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RAW_NAME(self):
            return self.getToken(BCDParser.RAW_NAME, 0)

        def getRuleIndex(self):
            return BCDParser.RULE_rawName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRawName" ):
                listener.enterRawName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRawName" ):
                listener.exitRawName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRawName" ):
                return visitor.visitRawName(self)
            else:
                return visitor.visitChildren(self)




    def rawName(self):
